[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/project_map/pm_comment_node.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/project_map/project_map.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.2, 0.231373, 0.309804, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:default_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:default_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.666667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:default_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:default_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:default_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.988235, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1, 1.5, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:default_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.666667, -0.25, 0, 0.25, 0, 0.666667, -0.25, 0, 0.25, 0, 0.470588, -0.25, 0, 0.25, 0, 0.666667, -0.25, 0, 0.25, 0, 0.666667, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1, 1.5, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:default_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.6, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 0.458824, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1, 1.5, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:default_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.568627, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.568627, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4, 1, 1.5, 2 )
}

[node name="ProjectMap" type="GraphEdit"]
margin_right = 898.0
margin_bottom = 685.0
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
right_disconnects = true
scroll_offset = Vector2( -135, -42 )
snap_distance = 32
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CommentNode" parent="." instance=ExtResource( 1 )]
margin_left = 359.0
margin_top = -96.0
margin_right = 826.0
margin_bottom = 249.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 1
custom_styles/commentfocus = SubResource( 2 )
custom_styles/comment = SubResource( 3 )
offset = Vector2( 224, -138 )
comment_text = "Welcome to Project Map

To start, drag files from the Godot filesystem into this screen to create file nodes. Click on the name to open it.

Drag the icons to move the nodes.

Click \"Add Group\" or \"Add Comment\" and click anywhere to add a group/comment node.

What you are reading is a comment node. Use the bottom-right handle to resize it, it appears when hovering the comment.
Click on the icon and press delete to delete it."
comment_rect = Vector2( 495, 355 )

[node name="Line2D" type="Line2D" parent="."]
z_index = 1
default_color = Color( 1, 0.666667, 0.6, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Line2D"]
anims/RESET = SubResource( 4 )
anims/blink = SubResource( 5 )

[connection signal="connection_request" from="." to="." method="_on_ProjectMap_connection_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_ProjectMap_disconnection_request"]
